hphp/hack/test/typecheck/reactive/mayberx5.php.exp
File "mayberx5.php", line 5, characters 14-22:
<<__MaybeRx>> attribute can only be put on parameters of conditionally reactive function or method annotated with <<__OnlyRxIfArgs>> attribute. (NastCheck[3063])
