hphp/hack/test/typecheck/reactive/mayberx5.php
<?hh // strict

// ERROR
<<__Rx>>
function f(<<__MaybeRx>>string $a): void {
}
